--- a/index.html
+++ b/index.html
@@ -201,41 +201,41 @@
                     <div class="container__service__img__items container__service__img1">
                         <img src="./img/services/sv1.jpg" alt="">
                         <span>Tập luyện với Huấn luyện viên cá nhân</span>
-                        <a href="./navigation/train.html" class="container__service__img__items__link">Xem thêm
+                        <a href="./navigation/personal_trainer.html" class="container__service__img__items__link">Xem thêm
                         </a>
                     </div>
                     <div class="container__service__img__items container__service__img2">
                         <img src="./img/services/sv2.jpg">
                         <span>Cơ hội trải nghiệm 40 bộ môn yoga</span>
-                        <a href="./navigation/train.html" class="container__service__img__items__link">Xem thêm
+                        <a href="./navigation/personal_trainer.html" class="container__service__img__items__link">Xem thêm
                         </a>
                     </div>
                     <div class="container__service__img__items container__service__img3">
                         <img src="./img/services/sv3.jpg" alt="">
                         <span>Tỏa căng thẳng với hơn 10 thể loại Group</span>
-                        <a href="./navigation/train.html" class="container__service__img__items__link">Xem thêm
+                        <a href="./navigation/personal_trainer.html" class="container__service__img__items__link">Xem thêm
                         </a>
                     </div>
                     <div class="container__service__img__items container__service__img4">
                         <img src="./img/services/sv4.jpg" alt="">
                         <span>Cùng nhau đạp xe để nâng cao sức khỏe</span>
-                        <a href="./navigation/train.html" class="container__service__img__items__link">Xem thêm
+                        <a href="./navigation/personal_trainer.html" class="container__service__img__items__link">Xem thêm
                         </a>
                     </div>
                     <div class="container__service__img__items container__service__img5">
                         <img src="./img/services/sv5.jpg" alt="">
                         <span>Có những dạng Dance như: Zumba, Sexy Dance </span>
-                        <a href="./navigation/train.html" class="container__service__img__items__link">Xem thêm
+                        <a href="./navigation/personal_trainer.html" class="container__service__img__items__link">Xem thêm
                         </a>
                     </div>
                     <div class="container__service__img__items container__service__img5">
                         <img src="./img/services/sv5.jpg" alt="">
                         <span>Có những dạng Dance như: Zumba, Sexy Dance </span>
-                        <a href="./navigation/train.html" class="container__service__img__items__link">Xem thêm
+                        <a href="./navigation/personal_trainer.html" class="container__service__img__items__link">Xem thêm
                         </a>
                     </div>
                 </div>
-                <!-- <a href="./navigation/train.html" class="container__service__link">Xem thêm</a> -->
+                <!-- <a href="./navigation/trpersonal_trainerin.html" class="container__service__link">Xem thêm</a> -->
             </div>
             <!-- LE VAN TIEN -->
             
