--- a/navigation/admin.html
+++ b/navigation/admin.html
@@ -117,6 +117,15 @@
                                     KHUYẾN MÃI
                                 </span>
                             </a>
+                            <div class="content__logout">
+                                <a class="content__logout__btn content__inner">
+                                    <!-- <i class='bx bx-code-alt'></i> -->
+                                    <i class="bxf fa-solid fa-right-from-bracket"></i>
+                                    <span class="noidung__text1">
+                                        ĐĂNG XUẤT
+                                    </span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
