--- a/navigation/personal_trainer.html
+++ b/navigation/personal_trainer.html
@@ -121,6 +121,15 @@
                                     KHUYẾN MÃI
                                 </span>
                             </a>
+                            <div class="content__logout">
+                                <a class="content__logout__btn content__inner">
+                                    <!-- <i class='bx bx-code-alt'></i> -->
+                                    <i class="bxf fa-solid fa-right-from-bracket"></i>
+                                    <span class="noidung__text1">
+                                        ĐĂNG XUẤT
+                                    </span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -141,9 +150,9 @@
         <div class="container">
             <div class="container__select">
                 <div id="colum-father" class="container__select__colum__one">
-                    <h1>
+                    <h2>
                         GIÚP KHÁCH HÀNG ĐẠT MỤC TIÊU
-                    </h1>
+                    </h2>
                     <h3>
                         Huấn luyện viên cá nhân của chúng tôi 
                         chịu trách nhiệm về mục tiêu của bạn.
@@ -267,9 +276,9 @@
                 <div class="cheer">
                     <div class="cheer__colum__one">
                         <div class="cheer__colum__one__content">
-                            <h1 class="title__colum__one">
+                            <h2 class="title__colum__one">
                                 đạt được phiên bản tốt nhất của bạn
-                            </h1>
+                            </h2>
                             <h3>
                                 Chịu trách nhiệm về sức khoẻ của bạn 
                                 và bắt tay vào một hành trình biến đổi với các 
@@ -341,9 +350,9 @@
             <div class="container3__select">
                 <div class="container3__title">
                     <div class="title3__content">
-                        <h1>
+                        <h2>
                             gặp gỡ các huấn luyện viên cá nhân hàng đầu tại closeai
-                        </h1>
+                        </h2>
                     </div>
                     <h3>
                         Các huấn luyện viên cá nhân hàng đầu trong 
