--- a/navigation/admin.html
+++ b/navigation/admin.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="../css/keyframes.css">
     <link rel="stylesheet" href="../navigation_css/chatbox.css">
     <link rel="stylesheet" href="../navigation_css/admin.css">
+    <link rel="stylesheet" href="../navigation_css/login.css">
     <!-- <link rel="stylesheet" href="./navigation_css/promotion.css"> -->
     <title>GYMZ - Thể hình giới trẻ</title>
 
@@ -398,8 +399,25 @@
 
         </div>
         <div class="modal__body">
-            <div class="add-card">
-
+            <div class="modal__body__box login-box">
+                <p>Đăng nhập tài khoản</p>
+                <div>
+                    <div class="user-box">
+                        <input class="login-email" required="" name="" type="text">
+                        <label>Tên đăng nhập</label>
+                    </div>
+                    <div class="user-box createBox">
+                        <input class="login-pass" required="" name="" type="password">
+                        <label>Mật khẩu</label>
+                    </div>
+                    <button id="login-btn" type="button">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        Đăng nhập
+                    </button>
+                </div>
             </div>
         </div>
     </div>
