--- a/index.html
+++ b/index.html
@@ -559,7 +559,8 @@
                         Đăng nhập
                     </button>
                 </div>
-                <p>Chưa có tài khoản? <span class="a2 link-create-account">Đăng ký!</span></p>
+                <p class="create__account__text">Chưa có tài khoản? <span class="a2 link-create-account">Đăng ký!</span></p>
+                <span class="forgot--account--link create__account__text a2">Quên mật khẩu?</span>
             </div>
             <div class="modal__body__box create-account-box">
                 <p>Đăng nhập tài khoản</p>
@@ -590,6 +591,24 @@
                 </div>
                 <p>Đã có tài khoản? <span class="a2 link-login">Đăng nhập!</span></p>
             </div>
+            <div class="modal__body__box forgot-pass-box">
+                <p>Quên mật khẩu</p>
+                <div>
+                    <div class="user-box">
+                        <input class="login-email" required="" name="" type="text">
+                        <label>Email</label>
+                    </div>
+                    <button id="forgot-btn" type="button">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        Gửi yêu cầu
+                    </button>
+                </div>
+                <p>Đã có tài khoản? <span class="a2 link-login">Đăng nhập!</span></p>
+            </div>
+
             
             <div class="modal__body__box register-cart">
                 <!-- <p>Đăng nhập tài khoản</p> -->
