--- a/navigation/card.html
+++ b/navigation/card.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="../navigation_css/card.css">
     <link rel="stylesheet" href="../navigation_css/login.css">
     <link rel="stylesheet" href="../navigation_css/toast.css">
-    <link rel="stylesheet" href="../navigation_css/information_card_TS.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <title>GYMZ - Thể hình giới trẻ</title>
 
 </head>
