--- a/navigation/information_card_TS.html
+++ b/navigation/information_card_TS.html
@@ -770,8 +770,7 @@
                         Đăng nhập
                     </button>
                 </div>
-                <p class="create__account__text">Chưa có tài khoản? <span class="a2 link-create-account">Đăng ký!</span>
-                </p>
+                <p class="create__account__text">Chưa có tài khoản? <span class="a2 link-create-account">Đăng ký!</span></p>
                 <span class="forgot--account--link create__account__text a2">Quên mật khẩu?</span>
             </div>
             <div class="modal__body__box create-account-box">
@@ -821,7 +820,7 @@
                 <p>Đã có tài khoản? <span class="a2 link-login">Đăng nhập!</span></p>
             </div>
 
-
+            
             <div class="modal__body__box register-cart">
                 <!-- <p>Đăng nhập tài khoản</p> -->
                 <div>
@@ -896,6 +895,31 @@
                         <span></span>
                         Đăng ký
                     </button>
+                </div>
+            </div>
+            <div class="modal__body__box change-name-box">
+                <p class="edit-title">Đổi tên khách hàng</p>
+                <div>
+                    <div class="user-box">
+                        <input class="new-name" required="" name="" type="text">
+                        <label class="edit-label">Tên mới</label>
+                    </div>
+                    <div class="submit__row">
+                        <button id="submitExit">
+                            <!-- <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span> -->
+                            Thoát
+                        </button>
+                        <button id="submitChangeName">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            Xác nhận
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
