--- a/index.html
+++ b/index.html
@@ -686,6 +686,31 @@
                     </button>
                 </div>
             </div>
+            <div class="modal__body__box change-name-box">
+                <p class="edit-title">Đổi tên khách hàng</p>
+                <div>
+                    <div class="user-box">
+                        <input class="new-name" required="" name="" type="text">
+                        <label class="edit-label">Tên mới</label>
+                    </div>
+                    <div class="submit__row">
+                        <button id="submitExit">
+                            <!-- <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span> -->
+                            Thoát
+                        </button>
+                        <button id="submitChangeName">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            Xác nhận
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div id="myModalShow" class="modal">
