event click change page login

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                                     <a class="loginstatus status" href="#">
                                         ĐĂNG NHẬP
                                     </a>
-                                    <a class="status" href="./navigation/information_account.html">
+                                    <a class="status status__link" href="./navigation/information_account.html">
                                         THÔNG TIN TÀI KHOẢN
                                     </a>
-                                    <a class="status" href="./navigation/information_card_TS.html">
+                                    <a class="status status__link" href="./navigation/information_card_TS.html">
                                         THẺ THÀNH VIÊN & LT
                                     </a>
                                     <a class="logoutstatus status" href="">
