--- a/navigation/personal_trainer.html
+++ b/navigation/personal_trainer.html
@@ -20,7 +20,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <!-- <link rel="stylesheet" href="../css/footer.css"> -->
     <link rel="stylesheet" href="../css/keyframes.css">
     <link rel="stylesheet" href="../navigation_css/toast.css">
     <link rel="stylesheet" href="../navigation_css/login.css">
@@ -50,7 +50,7 @@
                         <li>
                             <div class="dropdown">
                                 <a class="header__inner__navigation__sevice" href="#" onclick="yourFunction(event)">
-                                    DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m>
+                                    DỊCH VỤ<i class='bx bxs-right-arrow'></i>
                                 </a>
                                 <div class="containt">
                                     <a href="./personal_trainer.html">HUẤN LUYỆN VIÊN</a>
@@ -367,17 +367,21 @@
                         <div class="image">
                             <img src="/img/personal-trainer/hlv/quyen.png" alt="">
                         </div>
-                        <div class="title-bar">
-                            <div class="name-person">
-                                quyen dev
+                        <div class="information-bar">
+                            <div class="information-left">
+                                <div class="name-person">
+                                    quyen dev
+                                </div>
+                                <span class="job-name">
+                                    Personal Trainer
+                                </span>
                             </div>
-                            <span class="job-name">
-                                Personal Trainer
-                            </span>
-                            <div class="view-more">
-                                <button class="bt-view">
-                                    xem thêm
-                                </button>
+                            <div class="information-right">
+                                <div class="view-more">
+                                    <button class="bt-view">
+                                        xem
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -385,17 +389,21 @@
                         <div class="image">
                             <img src="/img/personal-trainer/hlv/tien.png" alt="">
                         </div>
-                        <div class="title-bar">
-                            <div class="name-person">
-                                tien fullstack
+                        <div class="information-bar">
+                            <div class="information-left">
+                                <div class="name-person">
+                                    tien fullstack
+                                </div>
+                                <span class="job-name">
+                                    Personal Trainer
+                                </span>
                             </div>
-                            <span class="job-name">
-                                Personal Trainer
-                            </span>
-                            <div class="view-more">
-                                <button class="bt-view">
-                                    xem thêm
-                                </button>
+                            <div class="information-right">
+                                <div class="view-more">
+                                    <button class="bt-view">
+                                        xem
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -403,17 +411,21 @@
                         <div class="image">
                             <img src="/img/personal-trainer/hlv/tu.png" alt="">
                         </div>
-                        <div class="title-bar">
-                            <div class="name-person">
-                                tu coder
+                        <div class="information-bar">
+                            <div class="information-left">
+                                <div class="name-person">
+                                    tu coder
+                                </div>
+                                <span class="job-name">
+                                    Personal Trainer
+                                </span>
                             </div>
-                            <span class="job-name">
-                                Personal Trainer
-                            </span>
-                            <div class="view-more">
-                                <button class="bt-view">
-                                    xem thêm
-                                </button>
+                            <div class="information-right">
+                                <div class="view-more">
+                                    <button class="bt-view">
+                                        xem
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -421,17 +433,21 @@
                         <div class="image">
                             <img src="/img/personal-trainer/hlv/truong.png" alt="">
                         </div>
-                        <div class="title-bar">
-                            <div class="name-person">
-                                truong design
+                        <div class="information-bar">
+                            <div class="information-left">
+                                <div class="name-person">
+                                    truong design
+                                </div>
+                                <span class="job-name">
+                                    Personal Trainer
+                                </span>
                             </div>
-                            <span class="job-name">
-                                Personal Trainer
-                            </span>
-                            <div class="view-more">
-                                <button class="bt-view">
-                                    xem thêm
-                                </button>
+                            <div class="information-right">
+                                <div class="view-more">
+                                    <button class="bt-view">
+                                        xem
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -439,17 +455,21 @@
                         <div class="image">
                             <img src="/img/personal-trainer/hlv/van.png" alt="">
                         </div>
-                        <div class="title-bar">
-                            <div class="name-person">
-                                van tester
+                        <div class="information-bar">
+                            <div class="information-left">
+                                <div class="name-person">
+                                    van tester
+                                </div>
+                                <span class="job-name">
+                                    Personal Trainer
+                                </span>
                             </div>
-                            <span class="job-name">
-                                Personal Trainer
-                            </span>
-                            <div class="view-more">
-                                <button class="bt-view">
-                                    xem thêm
-                                </button>
+                            <div class="information-right">
+                                <div class="view-more">
+                                    <button class="bt-view">
+                                        xem
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -469,17 +489,17 @@
                     <div class="about__us">
                         <div class="about__us__inner">
                             <a href="#">
-                                <m><i class='bx bxs-home'></i></m> Trụ sở chính: z115, Tân Thịnh, TP.Thái
+                                <i class='bx bxs-home'></i> Trụ sở chính: z115, Tân Thịnh, TP.Thái
                                 Nguyên, Thái Nguyên
                             </a>
                             <a href="#">
-                                <m><i class='bx bxs-phone'></i></m> Hotline: 0999.999.999
+                                <i class='bx bxs-phone'></i> Hotline: 0999.999.999
                             </a>
                             <a href="#">
-                                <m><i class='bx bxs-envelope'></i></m> Email: closeai.work@gmail.com
+                                <i class='bx bxs-envelope'></i> Email: closeai.work@gmail.com
                             </a>
                             <a href="#">
-                                <m><i class='bx bx-world'></i></m> Website: https://pwm.io.vn
+                                <i class='bx bx-world'></i> Website: https://pwm.io.vn
                             </a>
                         </div>
 
@@ -515,7 +535,7 @@
                             <div class="group">
                                 <div class="name__page">
                                     <a href="#">
-                                        GYM Z<m><i class='bx bxs-badge-check'></i></m>
+                                        GYM Z<i class='bx bxs-badge-check'></i>
                                     </a>
                                     <h4>
                                         999.999 người theo dõi
@@ -546,7 +566,7 @@
                 <div class="footer__last__select">
                     <div class="footer__last__select__inner">
                         <a href="#">
-                            <m><i class='bx bxs-copyright'></i></m> 2023 Allrights reserved pwm.io.vn
+                            <i class='bx bxs-copyright'></i> 2023 Allrights reserved pwm.io.vn
                         </a>
                     </div>
                 </div>
