--- a/navigation/personal_trainer.html
+++ b/navigation/personal_trainer.html
@@ -338,7 +338,7 @@
                     </div>
                     <div class="cheer__colum__two">
                         <div class="cheer__img">
-                            <img src="/img/personal-trainer/Untitled-3.png" alt="">
+                            <img src="/img/personal-trainer/Untitled-5.png" alt="">
                         </div>
                     </div>
                     <div class="shadow__cheer">
@@ -489,8 +489,8 @@
                     <div class="about__us">
                         <div class="about__us__inner">
                             <a href="#">
-                                <i class='bx bxs-home'></i> Trụ sở chính: z115, Tân Thịnh, TP.Thái
-                                Nguyên, Thái Nguyên
+                                <i class='bx bxs-home'></i> <span>Trụ sở chính: z115, Tân Thịnh, TP.Thái
+                                    Nguyên, Thái Nguyên</span>
                             </a>
                             <a href="#">
                                 <i class='bx bxs-phone'></i> Hotline: 0999.999.999
